--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -127,8 +127,10 @@ p, li { white-space: pre-wrap; }
      <string>&amp;File</string>
     </property>
     <addaction name="action_Run"/>
-    <addaction name="action_New_file"/>
-    <addaction name="action_Open"/>
+    <addaction name="action_New_File"/>
+    <addaction name="action_Open_File"/>
+    <addaction name="action_Save_File"/>
+    <addaction name="action_Save_File_as"/>
     <addaction name="separator"/>
     <addaction name="action_Quit"/>
    </widget>
@@ -145,7 +147,9 @@ p, li { white-space: pre-wrap; }
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="action_Open"/>
+   <addaction name="action_New_File"/>
+   <addaction name="action_Open_File"/>
+   <addaction name="action_Save_File"/>
    <addaction name="action_Run"/>
   </widget>
   <action name="action_Run">
@@ -154,24 +158,24 @@ p, li { white-space: pre-wrap; }
      <normaloff>:/icons/zafiro/actions/22/stock_media-play.svg</normaloff>:/icons/zafiro/actions/22/stock_media-play.svg</iconset>
    </property>
    <property name="text">
-    <string>Run</string>
+    <string>Run script</string>
    </property>
    <property name="toolTip">
-    <string>Run</string>
+    <string>Run script</string>
    </property>
   </action>
-  <action name="action_New_file">
+  <action name="action_New_File">
    <property name="text">
-    <string>&amp;New file</string>
+    <string>&amp;New File</string>
    </property>
   </action>
-  <action name="action_Open">
+  <action name="action_Open_File">
    <property name="icon">
     <iconset resource="icons.qrc">
      <normaloff>:/icons/zafiro/actions/22/document-open.svg</normaloff>:/icons/zafiro/actions/22/document-open.svg</iconset>
    </property>
    <property name="text">
-    <string>&amp;Open...</string>
+    <string>&amp;Open File...</string>
    </property>
   </action>
   <action name="action_Quit">
@@ -180,6 +184,20 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="toolTip">
     <string>Quit the program</string>
+   </property>
+  </action>
+  <action name="action_Save_File">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/zafiro/actions/22/document-save.svg</normaloff>:/icons/zafiro/actions/22/document-save.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Save File</string>
+   </property>
+  </action>
+  <action name="action_Save_File_as">
+   <property name="text">
+    <string>Save File as...</string>
    </property>
   </action>
  </widget>
