--- a/qjabs/icons.qrc
+++ b/qjabs/icons.qrc
@@ -1,64 +1,9 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/">
-        <file>icons/zafiro/apps/scalable/preferences-system.svg</file>
-        <file>icons/zafiro/actions/22/action-albumfolder-importdir2.svg</file>
-        <file>icons/zafiro/actions/22/add-folder-to-archive.svg</file>
-        <file>icons/zafiro/actions/22/albumfolder-importdir.svg</file>
-        <file>icons/zafiro/actions/22/albumfolder-new.svg</file>
-        <file>icons/zafiro/actions/22/archive-insert-directory.svg</file>
-        <file>icons/zafiro/actions/22/back.svg</file>
-        <file>icons/zafiro/actions/22/document-open.svg</file>
-        <file>icons/zafiro/actions/22/document-save.svg</file>
-        <file>icons/zafiro/actions/22/dynamic-amarok.svg</file>
-        <file>icons/zafiro/actions/22/edit-find.svg</file>
-        <file>icons/zafiro/actions/22/fileopen.svg</file>
-        <file>icons/zafiro/actions/22/fileview-preview.svg</file>
-        <file>icons/zafiro/actions/22/folder-new.svg</file>
-        <file>icons/zafiro/actions/22/folder_new.svg</file>
-        <file>icons/zafiro/actions/22/games-config-background.svg</file>
-        <file>icons/zafiro/actions/22/gnome-lockscreen.svg</file>
-        <file>icons/zafiro/actions/22/go-next.svg</file>
-        <file>icons/zafiro/actions/22/go-previous-rtl.svg</file>
-        <file>icons/zafiro/actions/22/go-previous.svg</file>
-        <file>icons/zafiro/actions/22/go-right.svg</file>
-        <file>icons/zafiro/actions/22/go-up.svg</file>
-        <file>icons/zafiro/actions/22/gtk-go-back-ltr.svg</file>
-        <file>icons/zafiro/actions/22/gtk-go-back-rtl.svg</file>
-        <file>icons/zafiro/actions/22/gtk-go-forward-ltr.svg</file>
-        <file>icons/zafiro/actions/22/gtk-go-forward-rtl.svg</file>
-        <file>icons/zafiro/actions/22/gtk-go-up.svg</file>
-        <file>icons/zafiro/actions/22/media-playback-pause.svg</file>
-        <file>icons/zafiro/actions/22/media-playback-start.svg</file>
-        <file>icons/zafiro/actions/22/media-playback-stop.svg</file>
-        <file>icons/zafiro/actions/22/media-playlist-repeat.svg</file>
-        <file>icons/zafiro/actions/22/media-playlist-shuffle.svg</file>
-        <file>icons/zafiro/actions/22/media-skip-backward.svg</file>
-        <file>icons/zafiro/actions/22/media-skip-forward.svg</file>
-        <file>icons/zafiro/actions/22/next.svg</file>
-        <file>icons/zafiro/actions/22/photo.svg</file>
-        <file>icons/zafiro/actions/22/photos-amarok.svg</file>
-        <file>icons/zafiro/actions/22/previous.svg</file>
-        <file>icons/zafiro/actions/22/rabbitvcs-emblems.svg</file>
-        <file>icons/zafiro/actions/22/selection-make-bitmap-copy.svg</file>
-        <file>icons/zafiro/actions/22/stock_left.svg</file>
-        <file>icons/zafiro/actions/22/stock_media-next.svg</file>
-        <file>icons/zafiro/actions/22/stock_media-pause.svg</file>
-        <file>icons/zafiro/actions/22/stock_media-play.svg</file>
-        <file>icons/zafiro/actions/22/stock_media-prev.svg</file>
-        <file>icons/zafiro/actions/22/stock_media-stop.svg</file>
-        <file>icons/zafiro/actions/22/stock_new-dir.svg</file>
-        <file>icons/zafiro/actions/22/stock_repeat.svg</file>
-        <file>icons/zafiro/actions/22/stock_right.svg</file>
-        <file>icons/zafiro/actions/22/stock_sheffle.svg</file>
-        <file>icons/zafiro/actions/22/stock_shuffle.svg</file>
-        <file>icons/zafiro/actions/22/stock_up.svg</file>
-        <file>icons/zafiro/actions/22/system-lock-screen.svg</file>
-        <file>icons/zafiro/actions/22/up.svg</file>
-        <file>icons/zafiro/actions/22/view-list-details.svg</file>
-        <file>icons/zafiro/actions/22/view-list-icons.svg</file>
-        <file>icons/zafiro/actions/22/view-preview.svg</file>
-        <file>icons/zafiro/actions/22/viewimage.svg</file>
-        <file>icons/zafiro/actions/22/x-shape-image.svg</file>
+        <file>icons/file-document.svg</file>
+        <file>icons/content-save.svg</file>
+        <file>icons/folder-open.svg</file> 
+        <file>icons/play-box.svg</file> 
     </qresource>
 </RCC>
