--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -155,7 +155,7 @@ p, li { white-space: pre-wrap; }
   <action name="action_Run">
    <property name="icon">
     <iconset resource="icons.qrc">
-     <normaloff>:/icons/zafiro/actions/22/stock_media-play.svg</normaloff>:/icons/zafiro/actions/22/stock_media-play.svg</iconset>
+     <normaloff>:/icons/play-box.svg</normaloff>:/icons/play-box.svg</iconset>
    </property>
    <property name="text">
     <string>Run script</string>
@@ -165,6 +165,10 @@ p, li { white-space: pre-wrap; }
    </property>
   </action>
   <action name="action_New_File">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/file-document.svg</normaloff>:/icons/file-document.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;New File</string>
    </property>
@@ -172,7 +176,7 @@ p, li { white-space: pre-wrap; }
   <action name="action_Open_File">
    <property name="icon">
     <iconset resource="icons.qrc">
-     <normaloff>:/icons/zafiro/actions/22/document-open.svg</normaloff>:/icons/zafiro/actions/22/document-open.svg</iconset>
+     <normaloff>:/icons/folder-open.svg</normaloff>:/icons/folder-open.svg</iconset>
    </property>
    <property name="text">
     <string>&amp;Open File...</string>
@@ -189,7 +193,7 @@ p, li { white-space: pre-wrap; }
   <action name="action_Save_File">
    <property name="icon">
     <iconset resource="icons.qrc">
-     <normaloff>:/icons/zafiro/actions/22/document-save.svg</normaloff>:/icons/zafiro/actions/22/document-save.svg</iconset>
+     <normaloff>:/icons/content-save.svg</normaloff>:/icons/content-save.svg</iconset>
    </property>
    <property name="text">
     <string>Save File</string>
