Add keyboard shortcuts to plot, make the ugly UI-thing disappear if it is not needed, move logscale and autorange (of yAxis) to context menu and shortcuts.

--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -26,7 +26,7 @@
          <widget class="CodeEditor" name="plainTextEdit"/>
         </item>
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="plotSettingsGroupBox">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -46,7 +46,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label">
              <property name="text">
-              <string>Spectrum</string>
+              <string>Detector</string>
              </property>
             </widget>
            </item>
@@ -54,43 +54,6 @@
             <widget class="QSpinBox" name="plotSpinBox">
              <property name="maximum">
               <number>0</number>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_2">
-             <property name="text">
-              <string>Autorange</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QCheckBox" name="autoRangeCheckBox">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>Enabled</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_3">
-             <property name="text">
-              <string>Log scale</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QCheckBox" name="logScaleCheckBox">
-             <property name="text">
-              <string>Enabled</string>
              </property>
             </widget>
            </item>
