--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -80,7 +80,7 @@
          </size>
         </property>
        </widget>
-       <widget class="QPlainTextEdit" name="msgPlainTextEdit">
+       <widget class="QTextEdit" name="msgTextEdit">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -92,9 +92,6 @@
           <width>300</width>
           <height>100</height>
          </size>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
         </property>
        </widget>
        <widget class="QLineEdit" name="commandLineEdit"/>
