Added tabular output on 'show det' if no detector number is given and there are more than 1 detector. Added 'last' and 'first' to be valid detector numbers (parsed by script_get_detector_number()). UI detector numbering is from 1 to N, inclusive (changed from 0 to N-1). Load exp will load all detector spectra from the given file, if no detector number is given.

--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -52,8 +52,11 @@
            </item>
            <item row="0" column="1">
             <widget class="QSpinBox" name="plotSpinBox">
+             <property name="minimum">
+              <number>1</number>
+             </property>
              <property name="maximum">
-              <number>0</number>
+              <number>1</number>
              </property>
             </widget>
            </item>
