--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -23,7 +23,11 @@
       <widget class="QWidget" name="verticalLayoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="CodeEditor" name="plainTextEdit"/>
+         <widget class="CodeEditor" name="plainTextEdit">
+          <property name="centerOnScroll">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QGroupBox" name="plotSettingsGroupBox">
