--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -83,10 +83,10 @@
          </size>
         </property>
        </widget>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QTextEdit" name="msgTextEdit">
+          <widget class="QTextBrowser" name="msgTextBrowser">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
