--- a/qjabs/preferencesdialog.ui
+++ b/qjabs/preferencesdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>558</width>
+    <width>729</width>
     <height>188</height>
    </rect>
   </property>
@@ -140,6 +140,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>jibalconfigurationfileLineEdit</tabstop>
+  <tabstop>jibalconfigurationfilechangePushButton</tabstop>
+  <tabstop>editorFontComboBox</tabstop>
+  <tabstop>editorfontsizeSpinBox</tabstop>
+  <tabstop>messageFontComboBox</tabstop>
+  <tabstop>messagefontsizeSpinBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
