--- a/qjabs/plotdialog.ui
+++ b/qjabs/plotdialog.ui
@@ -85,6 +85,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>isotopesCheckBox</tabstop>
+  <tabstop>comboBox</tabstop>
+  <tabstop>plotWhileFittingCheckBox</tabstop>
+  <tabstop>showlegendCheckBox</tabstop>
+  <tabstop>legendOutsideCheckBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
