--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -156,9 +156,16 @@
       <string>R&amp;ecent Files</string>
      </property>
     </widget>
+    <widget class="QMenu" name="menuImport">
+     <property name="title">
+      <string>Import</string>
+     </property>
+     <addaction name="actionIDF"/>
+    </widget>
     <addaction name="action_Run"/>
     <addaction name="action_New_File"/>
     <addaction name="action_Open_File"/>
+    <addaction name="menuImport"/>
     <addaction name="menuRecent_Files"/>
     <addaction name="action_Save_File"/>
     <addaction name="action_Save_File_as"/>
@@ -263,6 +270,11 @@
   <action name="actionPreferences">
    <property name="text">
     <string>Prefere&amp;nces...</string>
+   </property>
+  </action>
+  <action name="actionIDF">
+   <property name="text">
+    <string>IDF...</string>
    </property>
   </action>
  </widget>
