Confidence limits crashing stopped (after rebuilding?) and can not be reproduced. So maybe it works. Since the math can be wrong made saving of this data optional (with "save spectra cl"). Added an option to show/hide the confidence limits graph in the GUI. Disabled by default.

--- a/qjabs/plotdialog.ui
+++ b/qjabs/plotdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>270</width>
-    <height>176</height>
+    <height>196</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,9 +59,16 @@
       </widget>
      </item>
      <item>
+      <widget class="QCheckBox" name="confidencelimitsCheckBox">
+       <property name="text">
+        <string>Show confidence limits (BETA)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -76,10 +83,10 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Apply|QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
