--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QSplitter" name="splitter_2">
       <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+       <enum>Qt::Orientation::Horizontal</enum>
       </property>
       <widget class="CodeEditor" name="editor">
        <property name="minimumSize">
@@ -30,7 +30,7 @@
       </widget>
       <widget class="QSplitter" name="splitter">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <widget class="SpectrumPlot" name="widget" native="true">
         <property name="sizePolicy">
@@ -51,10 +51,10 @@
          <item>
           <widget class="QFrame" name="detectorFrame">
            <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
+            <enum>QFrame::Shape::NoFrame</enum>
            </property>
            <property name="frameShadow">
-            <enum>QFrame::Plain</enum>
+            <enum>QFrame::Shadow::Plain</enum>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <property name="leftMargin">
@@ -74,7 +74,7 @@
               <item>
                <spacer name="horizontalSpacer">
                 <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
+                 <enum>Qt::Orientation::Horizontal</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
@@ -118,10 +118,10 @@
                 </size>
                </property>
                <property name="inputMethodHints">
-                <set>Qt::ImhNone</set>
+                <set>Qt::InputMethodHint::ImhNone</set>
                </property>
                <property name="lineWrapMode">
-                <enum>QTextEdit::NoWrap</enum>
+                <enum>QTextEdit::LineWrapMode::NoWrap</enum>
                </property>
                <property name="readOnly">
                 <bool>true</bool>
@@ -209,8 +209,8 @@
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edit"/>
-   <addaction name="menu_Help"/>
    <addaction name="menuDetector"/>
+   <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
