Toolbar is a Toolbar not a toolBar.

--- a/qjabs/mainwindow.ui
+++ b/qjabs/mainwindow.ui
@@ -215,7 +215,10 @@
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Toolbar</string>
+   </property>
+   <property name="whatsThis">
+    <string>This is a toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
